objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>blng__InvoiceRunProcessingStatus__c</fullName>
        <label>Invoice Run Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceRunProcessingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__InvoiceRunStartDate__c</fullName>
        <label>Invoice Run Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceRunStatusIndex__c</fullName>
        <externalId>true</externalId>
        <label>Invoice Run Status (Index)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Run</label>
        <referenceTo>blng__InvoiceRun__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>InvoiceRunOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__LastChargeToDate__c</fullName>
        <label>Last Charge To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__LastInvoiceTargetDate__c</fullName>
        <label>Last Invoice Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntityReference__c</fullName>
        <externalId>true</externalId>
        <label>LegalEntityReference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__LegalEntity__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__NextBillingDate__c</fullName>
        <inlineHelpText>System generated. The start of the Billing period for the next invoice line for this order product.</inlineHelpText>
        <label>Next Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__NextChargeDate__c</fullName>
        <label>Next Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__OverrideBillableUnitPrice__c</fullName>
        <inlineHelpText>Use this field to manually override the calculated Billable Unit Price.</inlineHelpText>
        <label>Override Billable Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__OverrideInitialRevenueEndDate__c</fullName>
        <label>Override Initial Revenue End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__OverrideInitialRevenueStartDate__c</fullName>
        <label>Override Initial Revenue Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__OverrideNextBillingDate__c</fullName>
        <label>Override Next Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__PendingBillings__c</fullName>
        <inlineHelpText>Total remaining to be billed.</inlineHelpText>
        <label>Pending Billing Amount (without tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueExpectedAmount__c</fullName>
        <label>Revenue Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueLiabilityAmount__c</fullName>
        <label>Revenue Liability Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueMostLikelyAmount__c</fullName>
        <label>Revenue Most Likely Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__RevenueRecognitionRule__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>RevenueRecognitionRuleOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueScheduleStatus__c</fullName>
        <label>Revenue Schedule Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__RevenueScheduleStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TaxCity__c</fullName>
        <label>Tax City (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCountry__c</fullName>
        <label>Tax Country (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCounty__c</fullName>
        <label>Tax County (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxErrorMessage__c</fullName>
        <label>Tax Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Order Products (Tax GL Rule)</relationshipLabel>
        <relationshipName>TaxGLRuleOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Order Products (Tax GL Treatment)</relationshipLabel>
        <relationshipName>TaxGLTreatmentOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxPercentageApplied__c</fullName>
        <label>Tax Percentage Applied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>blng__TaxRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Tax Rule assigned to this order product.</inlineHelpText>
        <label>Tax Rule</label>
        <referenceTo>blng__TaxRule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>TaxRuleOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxState__c</fullName>
        <label>Tax State (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStatus__c</fullName>
        <inlineHelpText>The status of the tax calculation for this order product.</inlineHelpText>
        <label>Tax Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__LineTaxStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TaxStreet2__c</fullName>
        <label>Tax Street 2 (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStreet__c</fullName>
        <label>Tax Street 1 (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Tax Treatment assigned to this order product.</inlineHelpText>
        <label>Tax Treatment</label>
        <referenceTo>blng__TaxTreatment__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>TaxTreatmentOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxZipCode__c</fullName>
        <label>Tax Postal Code (Override)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TerminatedBillings__c</fullName>
        <inlineHelpText>Amount that could be canceled from an order product based on termination date. Can&apos;t be more than the pending billing amount.</inlineHelpText>
        <label>Terminated Billing Amount (without tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalBilling__c</fullName>
        <formula>blng__BilledAmountwithouttax__c  +  blng__BilledTax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The sum of all invoice lines and taxes for this order.</inlineHelpText>
        <label>Total Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__UsageFloorQuantity__c</fullName>
        <label>Usage Floor Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>SBQQ__CannotChangeBookingIndicatorOnActivation</fullName>
        <active>true</active>
        <description>Can’t edit the bookings status on an activated order product.</description>
        <errorConditionFormula>AND(SBQQ__Activated__c, ISCHANGED(SBQQ__BookingsIndicator__c))</errorConditionFormula>
        <errorDisplayField>SBQQ__BookingsIndicator__c</errorDisplayField>
        <errorMessage>Can’t edit the bookings status on an activated order product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is &apos;One-Time&apos;, a Billing Frequency value cannot be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is &apos;One-Time&apos;, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR(
            AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))),
            AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>blng__BIllingRuleMustBeSelected</fullName>
        <active>false</active>
        <description>Billing Rule must be selected</description>
        <errorConditionFormula>AND(OR(ISNEW(), AND (ISCHANGED(SBQQ__Activated__c), SBQQ__Activated__c)), ISBLANK(blng__BillingRule__c))</errorConditionFormula>
        <errorMessage>Billing Rule must be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>blng__RevenueRecognitionRuleMustBeSelected</fullName>
        <active>false</active>
        <description>Revenue Recognition Rule must be selected</description>
        <errorConditionFormula>AND(OR(ISNEW(), AND (ISCHANGED(SBQQ__Activated__c), SBQQ__Activated__c)), ISBLANK(blng__RevenueRecognitionRule__c))</errorConditionFormula>
        <errorMessage>Revenue Recognition Rule must be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>blng__TaxRuleMustBeSelected</fullName>
        <active>false</active>
        <description>Tax Rule must be selected</description>
        <errorConditionFormula>AND(OR(ISNEW(), AND (ISCHANGED(SBQQ__Activated__c), SBQQ__Activated__c)), ISBLANK(blng__TaxRule__c))</errorConditionFormula>
        <errorMessage>Tax Rule must be selected</errorMessage>
    </validationRules>
</CustomObject>